--- a/openfisca_barcelona/tests/benefits/GE-051-02.yaml
+++ b/openfisca_barcelona/tests/benefits/GE-051-02.yaml
@@ -8,10 +8,12 @@
    - id: "adult1"
      data_naixement: 1960-01-01
      ingressos_bruts: 500
-     desocupat: true
+     situacio_laboral: 'desocupat'
+     ha_treballat_a_l_estranger_6_mesos_i_ha_retornat_en_els_ultims_12_mesos: true
+     inscrit_com_a_demandant_docupacio: true
      ha_treballat_a_l_estranger_6_mesos: true
-     no_se_li_ha_concedit_cap_ajuda_rai_en_els_ultims_12_mesos: true
-     no_se_li_ha_concedit_tres_ajudes_rai_anteriors: true
+     ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+     ha_estat_beneficiari_de_les_tres_rai_anteriors: false
      treballa_per_compte_propi: false
      ingressat_en_centre_penitenciari: false
      percep_prestacions_incompatibles_amb_la_feina: false
@@ -29,10 +31,12 @@
    - id: "adult1"
      data_naixement: 1980-01-01
      ingressos_bruts: 500
-     desocupat: true
+     situacio_laboral: 'desocupat'
+     inscrit_com_a_demandant_docupacio: true
      ha_treballat_a_l_estranger_6_mesos: true
-     no_se_li_ha_concedit_cap_ajuda_rai_en_els_ultims_12_mesos: true
-     no_se_li_ha_concedit_tres_ajudes_rai_anteriors: true
+     ha_treballat_a_l_estranger_6_mesos_i_ha_retornat_en_els_ultims_12_mesos: true
+     ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+     ha_estat_beneficiari_de_les_tres_rai_anteriors: false
      treballa_per_compte_propi: false
      ingressat_en_centre_penitenciari: false
      percep_prestacions_incompatibles_amb_la_feina: false
@@ -50,10 +54,12 @@
    - id: "adult1"
      data_naixement: 1960-01-01
      ingressos_bruts: 500
-     desocupat: false
+     situacio_laboral: 'treball_compte_daltri_jornada_complerta'
+     inscrit_com_a_demandant_docupacio: false
      ha_treballat_a_l_estranger_6_mesos: true
-     no_se_li_ha_concedit_cap_ajuda_rai_en_els_ultims_12_mesos: true
-     no_se_li_ha_concedit_tres_ajudes_rai_anteriors: true
+     ha_treballat_a_l_estranger_6_mesos_i_ha_retornat_en_els_ultims_12_mesos: true
+     ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+     ha_estat_beneficiari_de_les_tres_rai_anteriors: false
      treballa_per_compte_propi: false
      ingressat_en_centre_penitenciari: false
      percep_prestacions_incompatibles_amb_la_feina: false
@@ -71,10 +77,12 @@
    - id: "adult1"
      data_naixement: 1960-01-01
      ingressos_bruts: 500
-     desocupat: true
+     situacio_laboral: 'desocupat'
+     inscrit_com_a_demandant_docupacio: true
      ha_treballat_a_l_estranger_6_mesos: false
-     no_se_li_ha_concedit_cap_ajuda_rai_en_els_ultims_12_mesos: true
-     no_se_li_ha_concedit_tres_ajudes_rai_anteriors: true
+     ha_treballat_a_l_estranger_6_mesos_i_ha_retornat_en_els_ultims_12_mesos: true
+     ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+     ha_estat_beneficiari_de_les_tres_rai_anteriors: false
      treballa_per_compte_propi: false
      ingressat_en_centre_penitenciari: false
      percep_prestacions_incompatibles_amb_la_feina: false
@@ -91,10 +99,12 @@
    - id: "adult1"
      data_naixement: 1960-01-01
      ingressos_bruts: 500
-     desocupat: true
+     situacio_laboral: 'desocupat'
+     inscrit_com_a_demandant_docupacio: true
      ha_treballat_a_l_estranger_6_mesos: true
-     no_se_li_ha_concedit_cap_ajuda_rai_en_els_ultims_12_mesos: false
-     no_se_li_ha_concedit_tres_ajudes_rai_anteriors: true
+     ha_treballat_a_l_estranger_6_mesos_i_ha_retornat_en_els_ultims_12_mesos: true
+     ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: true
+     ha_estat_beneficiari_de_les_tres_rai_anteriors: false
      treballa_per_compte_propi: false
      ingressat_en_centre_penitenciari: false
      percep_prestacions_incompatibles_amb_la_feina: false
@@ -112,10 +122,12 @@
    - id: "adult1"
      data_naixement: 1960-01-01
      ingressos_bruts: 500
-     desocupat: true
+     situacio_laboral: 'desocupat'
+     inscrit_com_a_demandant_docupacio: true
      ha_treballat_a_l_estranger_6_mesos: true
-     no_se_li_ha_concedit_cap_ajuda_rai_en_els_ultims_12_mesos: true
-     no_se_li_ha_concedit_tres_ajudes_rai_anteriors: false
+     ha_treballat_a_l_estranger_6_mesos_i_ha_retornat_en_els_ultims_12_mesos: true
+     ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+     ha_estat_beneficiari_de_les_tres_rai_anteriors: true
      treballa_per_compte_propi: false
      ingressat_en_centre_penitenciari: false
      percep_prestacions_incompatibles_amb_la_feina: false
@@ -133,10 +145,12 @@
    - id: "adult1"
      data_naixement: 1960-01-01
      ingressos_bruts: 500
-     desocupat: true
+     inscrit_com_a_demandant_docupacio: true
+     situacio_laboral: 'desocupat'
      ha_treballat_a_l_estranger_6_mesos: true
-     no_se_li_ha_concedit_cap_ajuda_rai_en_els_ultims_12_mesos: true
-     no_se_li_ha_concedit_tres_ajudes_rai_anteriors: false
+     ha_treballat_a_l_estranger_6_mesos_i_ha_retornat_en_els_ultims_12_mesos: true
+     ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+     ha_estat_beneficiari_de_les_tres_rai_anteriors: true
      treballa_per_compte_propi: true
      ingressat_en_centre_penitenciari: false
      percep_prestacions_incompatibles_amb_la_feina: false
@@ -153,10 +167,12 @@
    - id: "adult1"
      data_naixement: 1960-01-01
      ingressos_bruts: 500
-     desocupat: true
+     inscrit_com_a_demandant_docupacio: true
+     situacio_laboral: 'desocupat'
      ha_treballat_a_l_estranger_6_mesos: true
-     no_se_li_ha_concedit_cap_ajuda_rai_en_els_ultims_12_mesos: true
-     no_se_li_ha_concedit_tres_ajudes_rai_anteriors: false
+     ha_treballat_a_l_estranger_6_mesos_i_ha_retornat_en_els_ultims_12_mesos: true
+     ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+     ha_estat_beneficiari_de_les_tres_rai_anteriors: true
      treballa_per_compte_propi: false
      ingressat_en_centre_penitenciari: true
      percep_prestacions_incompatibles_amb_la_feina: false
@@ -174,10 +190,12 @@
    - id: "adult1"
      data_naixement: 1960-01-01
      ingressos_bruts: 500
-     desocupat: true
+     situacio_laboral: 'desocupat'
+     inscrit_com_a_demandant_docupacio: true
      ha_treballat_a_l_estranger_6_mesos: true
-     no_se_li_ha_concedit_cap_ajuda_rai_en_els_ultims_12_mesos: true
-     no_se_li_ha_concedit_tres_ajudes_rai_anteriors: false
+     ha_treballat_a_l_estranger_6_mesos_i_ha_retornat_en_els_ultims_12_mesos: true
+     ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+     ha_estat_beneficiari_de_les_tres_rai_anteriors: true
      treballa_per_compte_propi: false
      ingressat_en_centre_penitenciari: false
      percep_prestacions_incompatibles_amb_la_feina: true
@@ -194,10 +212,34 @@
    - id: "adult1"
      data_naixement: 1960-01-01
      ingressos_bruts: 500
-     desocupat: true
+     situacio_laboral: 'desocupat'
+     inscrit_com_a_demandant_docupacio: true
      ha_treballat_a_l_estranger_6_mesos: true
-     no_se_li_ha_concedit_cap_ajuda_rai_en_els_ultims_12_mesos: true
-     no_se_li_ha_concedit_tres_ajudes_rai_anteriors: false
+     ha_treballat_a_l_estranger_6_mesos_i_ha_retornat_en_els_ultims_12_mesos: true
+     ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+     ha_estat_beneficiari_de_les_tres_rai_anteriors: true
+     treballa_per_compte_propi: false
+     ingressat_en_centre_penitenciari: false
+     percep_prestacions_incompatibles_amb_la_feina: false
+  output_variables:
+     GE_051_02_mensual: [ 0 ]
+
+- name: "Persona amb tots els condicionants menys ha_treballat_a_l_estranger_6_mesos_i_ha_retornat_en_els_ultims_12_mesos NO reb l'ajuda"
+  description: RAI 2 - Per emigrants retornats major de 45 anys
+  period: 2017-01
+  absolute_error_margin: false
+  families:
+     adults: ["adult1"]
+  persones:
+   - id: "adult1"
+     data_naixement: 1960-01-01
+     ingressos_bruts: 500
+     situacio_laboral: 'desocupat'
+     inscrit_com_a_demandant_docupacio: true
+     ha_treballat_a_l_estranger_6_mesos_i_ha_retornat_en_els_ultims_12_mesos: false
+     ha_treballat_a_l_estranger_6_mesos: true
+     ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+     ha_estat_beneficiari_de_les_tres_rai_anteriors: false
      treballa_per_compte_propi: false
      ingressat_en_centre_penitenciari: false
      percep_prestacions_incompatibles_amb_la_feina: false
@@ -205,4 +247,24 @@
      GE_051_02_mensual: [ 0 ]
 
 
-
+- name: "Persona amb tots els condicionants menys inscrit com a demandant d'ocupacio no reb l'ajuda"
+  description: RAI 2 - Per emigrants retornats major de 45 anys
+  period: 2017-01
+  absolute_error_margin: false
+  families:
+     adults: ["adult1"]
+  persones:
+   - id: "adult1"
+     data_naixement: 1960-01-01
+     ingressos_bruts: 500
+     situacio_laboral: 'desocupat'
+     inscrit_com_a_demandant_docupacio: false
+     ha_treballat_a_l_estranger_6_mesos_i_ha_retornat_en_els_ultims_12_mesos: true
+     ha_treballat_a_l_estranger_6_mesos: true
+     ha_estat_beneficiari_de_la_rai_en_els_ultims_12_mesos: false
+     ha_estat_beneficiari_de_les_tres_rai_anteriors: false
+     treballa_per_compte_propi: false
+     ingressat_en_centre_penitenciari: false
+     percep_prestacions_incompatibles_amb_la_feina: false
+  output_variables:
+     GE_051_02_mensual: [ 0 ]
